* fixed calendar init bug (not showing reservations) * created /sql folder with .htaccess

--- a/css/styles.css
+++ b/css/styles.css
@@ -145,5 +145,5 @@ ul {
 }
 
 body .galleria-container { 
-    background: #181822; 
+    background: #080820; 
 }
